[package]
name = "rust_archiver"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
zip = { version = "2.2", features = ["deflate"] }
tar = "0.4"
flate2 = "1.0"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
thiserror = "2.0"
sevenz-rust = "0.6"
age = "0.10"
tempfile = "3"
secrecy = "0.8"
filetime = "0.2"
time = "0.3"